# doric

./: Cargo.toml  README.md
examples/: test.rs
src/: config.rs  lib.rs
src/backend/: console.rs  extend.rs  material.rs  mod.rs
src/encode/: encoder.rs  mod.rs  parser.rs
src/runtime/: append.rs  endpoint.rs  logger.rs  mod.rs
